--- a/styles.css
+++ b/styles.css
@@ -30,9 +30,9 @@ html, body, .opening-section {
     display: flex;
     flex-direction: column;
     align-items: center;
-    top: 8%;
+    top: 50%;
     left: 50%;
-    transform: translate(-50%);
+    transform: translate(-50%,-50%);
     font-weight: bolder;
     font-size: large;
     color: whitesmoke;
