--- a/styles.css
+++ b/styles.css
@@ -129,9 +129,9 @@ button:hover{
   display: flex;
   flex-direction: column;
   align-items: center;
-  top: 20%;
+  top: 50%;
   left: 50%;
-  transform: translate(-50%);
+  transform: translate(-50%,-50%);
   font-weight: bolder;
   font-size: 20px;
   color: whitesmoke;
